--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,11 @@
 /*  your css code here. If applicable */
+ body{
+        background-color: #cccccc;
+      }
+      .player_one{
+        display: flex;
+        flex-direction: column;
+      }
+      .player_one a{
+        text-decoration: none;
+      }
