--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,29 @@
 /*  your css code here. If applicable */
- body{
-        background-color: #cccccc;
-      }
-      .player_one{
-        display: flex;
-        flex-direction: column;
-      }
-      .player_one a{
+ body {
+            background-color: #cccccc;
+        }
+       h1{
+        text-align: center;
+       }
+       .player_one{
+        background-color: white;
+        border: 1px solid black;
+       }
+       .player_one ul li{
+        list-style-type: none;
+
+
+       }
+       .player_one ul li a{
         text-decoration: none;
-      }
+        
+       }
+       h2{
+        text-align: center;
+       }
+       .player_two video{
+        align-items: center;
+        padding: 0px 259px;
+       }
+       .player_three{
+       } 
